--- a/order-dev.properties
+++ b/order-dev.properties
@@ -5,4 +5,4 @@ spring.datasource.data-username=root
 spring.datasource.password=123456
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sell?characterEncoding=utf-8&useSSL=false
 eureka.instance.prefer-ip-address=true
-env=test1
+env=test
